[gd_scene load_steps=2 format=3 uid="uid://b2ihkmu3aft7"]

[ext_resource type="Script" path="res://Areas/AmbienceArea2D.gd" id="1_xucfa"]

[node name="AmbienceArea2D" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_xucfa")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
